new changes to repo structure

--- a/analysis/create_analysis_parquets.ipynb
+++ b/analysis/create_analysis_parquets.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports"
+    "## Imports and config"
    ]
   },
   {
@@ -20,25 +20,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import easysnowdata\n",
-    "import pystac_client\n",
     "import tqdm\n",
-    "import planetary_computer\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
     "import xarray as xr\n",
-    "import odc.stac\n",
     "import pathlib\n",
     "import dask\n",
     "import dask.distributed\n",
     "import coiled\n",
-    "import matplotlib.pyplot as plt\n",
-    "import xdem\n",
-    "import rasterio\n",
-    "import seaborn as sns\n",
-    "import dask.dataframe as dd\n",
-    "from global_snowmelt_runoff_onset.config import Config, Tile"
+    "from global_snowmelt_runoff_onset.config import Config\n",
+    "from global_snowmelt_runoff_onset.analysis import create_and_save_analysis_parquet"
    ]
   },
   {
@@ -51,15 +40,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Read global product"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,220 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clip global product and reproject to UTM zone "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_coordinate_arrays(ds):\n",
-    "    \"\"\"\n",
-    "    Create additional arrays to store original lat/lon coordinates.\n",
-    "    \"\"\"\n",
-    "    lat, lon = np.meshgrid(ds.latitude, ds.longitude)\n",
-    "    ds['original_lat'] = xr.DataArray(lat.T, dims=('latitude', 'longitude'))\n",
-    "    ds['original_lon'] = xr.DataArray(lon.T, dims=('latitude', 'longitude'))\n",
-    "    return ds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Rearrange data variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_water_year_dim_to_var(ds):\n",
-    "    for year in ds.water_year.values:\n",
-    "        ds[f'runoff_onset_WY{year}'] = ds['runoff_onset'].sel(water_year=year)\n",
-    "\n",
-    "    ds = ds.drop_vars('runoff_onset').drop_vars('water_year')\n",
-    "    return ds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bring in variables: elevation, aspect, slope, tpi, snow class, esa worldcover, forest cover fraction... "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_topography(tile,ds):\n",
-    "    catalog = pystac_client.Client.open(\"https://planetarycomputer.microsoft.com/api/stac/v1\",modifier=planetary_computer.sign_inplace)\n",
-    "    search = catalog.search(collections=[f\"cop-dem-glo-30\"],intersects=tile.geobox.geographic_extent)\n",
-    "    dem_da = odc.stac.load(items=search.items(),like=ds,chunks={},resampling='bilinear')['data'].squeeze()\n",
-    "    dem_da = dem_da.rio.write_nodata(-32767,encoded=True).drop_vars('time').compute() # compute for xdem stuff\n",
-    "\n",
-    "    ds['dem'] = dem_da\n",
-    "\n",
-    "    # [xDEM](https://xdem.readthedocs.io/en/stable/index.html) to calculate slope and aspect and topographic position index\n",
-    "\n",
-    "    attributes = xdem.terrain.get_terrain_attribute(\n",
-    "        ds['dem'],\n",
-    "        resolution=ds['dem'].rio.resolution()[0],\n",
-    "        attribute=[\"aspect\", \"slope\", \"topographic_position_index\"],\n",
-    "    )\n",
-    "\n",
-    "    ds['aspect'] = xr.DataArray(attributes[0], dims=ds['dem'].dims, coords=ds['dem'].coords)\n",
-    "    ds['slope'] = xr.DataArray(attributes[1], dims=ds['dem'].dims, coords=ds['dem'].coords)\n",
-    "    # TPI? https://xdem.readthedocs.io/en/stable/gen_modules/xdem.DEM.topographic_position_index.html, https://tc.copernicus.org/articles/8/1989/2014/tc-8-1989-2014.pdf\n",
-    "    # maybe incorrect radius...\n",
-    "    ds['tpi'] = xr.DataArray(attributes[2], dims=ds['dem'].dims, coords=ds['dem'].coords)\n",
-    "\n",
-    "    # DAH?\n",
-    "    # alpha_max = 202.5 #only in northern hemisphere at specific latitude?\n",
-    "    # DAH_da = np.cos(np.deg2rad(alpha_max-aspect_da))*np.arctan(np.deg2rad(slope_da))\n",
-    "\n",
-    "    return ds\n",
-    "\n",
-    "def add_chili(tile,ds):\n",
-    "\n",
-    "    chili_da = easysnowdata.topography.get_chili(tile.bbox_gdf)\n",
-    "    ds['chili'] = chili_da.rio.reproject_match(ds['dem'],resampling=rasterio.enums.Resampling.bilinear)\n",
-    "\n",
-    "    return ds\n",
-    "\n",
-    "def add_snow_class(tile,ds):\n",
-    "\n",
-    "    snow_classification = easysnowdata.remote_sensing.get_seasonal_snow_classification(tile.bbox_gdf, mask_nodata=True)\n",
-    "    ds['snow_classification'] = snow_classification.rio.reproject_match(ds['dem'],resampling=rasterio.enums.Resampling.mode)\n",
-    "\n",
-    "    return ds\n",
-    "\n",
-    "def add_esa_worldcover(tile,ds):\n",
-    "\n",
-    "    esa_worldcover = easysnowdata.remote_sensing.get_esa_worldcover(tile.bbox_gdf, mask_nodata=True)\n",
-    "    ds['esa_worldcover'] = esa_worldcover.rio.reproject_match(ds['dem'],resampling=rasterio.enums.Resampling.mode)\n",
-    "\n",
-    "    return ds\n",
-    "\n",
-    "def add_forest_cover(tile,ds):\n",
-    "\n",
-    "    forest_cover_fraction = easysnowdata.remote_sensing.get_forest_cover_fraction(tile.bbox_gdf, mask_nodata=True)\n",
-    "    ds['forest_cover_fraction'] = forest_cover_fraction.rio.reproject_match(ds['dem'],resampling=rasterio.enums.Resampling.bilinear)\n",
-    "\n",
-    "    return ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# recalc median, std, nmad, trend, trend strength (use diff thresholds?)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Convert dataset with all variables to dataframe where each pixel location is a row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dataset_to_dataframe(tile,ds):\n",
-    "    # only drop row values / a pixel if there are no runoff_onset_predictions for any of the years\n",
-    "    # drop_subset = [f'runoff_onset_WY{water_year}' for water_year in water_years]\n",
-    "\n",
-    "    #df = ds.to_dataframe().reset_index().dropna(subset=drop_subset,how='all').drop_vars('spatial_ref', axis=1) use this if we want to keep pixels with runoff_onset_predictions for two or less years, for three or more use next line\n",
-    "    df = ds.to_dataframe().reset_index().dropna(subset='runoff_onset_median').drop('spatial_ref', axis=1)\n",
-    "\n",
-    "    df['tile_row'] = tile.row\n",
-    "    df['tile_col'] = tile.col\n",
-    "    hemisphere = 'northern' if ds.rio.crs.to_epsg() < 32700 else 'southern'\n",
-    "    df['hemisphere'] = hemisphere\n",
-    "    # change these as we include/exclude new vars\n",
-    "    df = df[[\"tile_row\",\"tile_col\",\"hemisphere\",\"original_lat\",\"original_lon\",\"runoff_onset_WY2015\",\"runoff_onset_WY2016\",\"runoff_onset_WY2017\",\"runoff_onset_WY2018\",\"runoff_onset_WY2019\",\"runoff_onset_WY2020\",\"runoff_onset_WY2021\",\"runoff_onset_WY2022\",\"runoff_onset_WY2023\",\"runoff_onset_WY2024\",\"runoff_onset_median\",\"runoff_onset_std\",\"dem\",\"aspect\",\"slope\",\"tpi\",\"chili\",\"snow_classification\",\"esa_worldcover\",\"forest_cover_fraction\"]]\n",
-    "    \n",
-    "    columns_to_round = [col for col in df.columns if col not in ['original_lat', 'original_lon', 'runoff_onset_std', 'hemisphere']]\n",
-    "    df[columns_to_round] = df[columns_to_round].replace([np.inf, -np.inf, np.nan], -9999)\n",
-    "    df[columns_to_round] = df[columns_to_round].round().astype(int)\n",
-    "\n",
-    "    df['original_lat'] = df['original_lat'].round(4)\n",
-    "    df['original_lon'] = df['original_lon'].round(4)\n",
-    "    df['runoff_onset_std'] = df['runoff_onset_std'].round(2)\n",
-    "\n",
-    "    for col in df.columns:\n",
-    "        if df[col].dtype == 'int64':\n",
-    "            df[col] = pd.to_numeric(df[col], downcast='integer')\n",
-    "        elif df[col].dtype == 'float64':\n",
-    "            df[col] = pd.to_numeric(df[col], downcast='float')\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Put it all together"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_utm_datacube(tile, global_ds):\n",
-    "    tile_ds = global_ds.rio.clip_box(*tile.get_geobox().boundingbox,crs='EPSG:4326')\n",
-    "    tile_ds = add_coordinate_arrays(tile_ds)\n",
-    "    utm_crs = tile_ds.rio.estimate_utm_crs()\n",
-    "    tile_utm_ds = tile_ds.rio.reproject(utm_crs,resolution=80,resampling=rasterio.enums.Resampling.bilinear).persist()\n",
-    "    tile_utm_ds = convert_water_year_dim_to_var(tile_utm_ds)\n",
-    "    tile_utm_ds = add_topography(tile,tile_utm_ds)\n",
-    "    tile_utm_ds = add_chili(tile,tile_utm_ds)\n",
-    "    tile_utm_ds = add_snow_class(tile,tile_utm_ds)\n",
-    "    tile_utm_ds = add_esa_worldcover(tile,tile_utm_ds)\n",
-    "    tile_utm_ds = add_forest_cover(tile,tile_utm_ds)\n",
-    "    return tile_utm_ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_and_save_analysis_parquet(tile, filename, filesystem, global_ds):\n",
-    "    print(f\"Processing {filename}\")\n",
-    "    try:\n",
-    "        tile_utm_ds = create_utm_datacube(tile, global_ds)\n",
-    "        tile_utm_df = dataset_to_dataframe(tile, tile_utm_ds)\n",
-    "        tile_utm_df.to_parquet(f\"snowmelt/analysis/tiles/{filename}\",filesystem=filesystem)\n",
-    "        print(f\"Saved {filename}\")\n",
-    "        return filename, True\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error processing {filename}: {e}\")\n",
-    "        return filename, False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## get tiles"
+    "## view tiles"
    ]
   },
   {
@@ -296,70 +65,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tile = Tile(14,27)\n",
-    "#tile = Tile(1,132)\n",
-    "tile.geobox.explore(tiles='EsriWorldImagery')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tile_utm_ds = create_utm_datacube(tile, global_ds)\n",
-    "tile_utm_ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the number of variables\n",
-    "n_vars = len(tile_utm_ds.data_vars)\n",
-    "\n",
-    "# Calculate the number of rows and columns for the subplots\n",
-    "n_cols = 3  # You can adjust this number as needed\n",
-    "n_rows = (n_vars + n_cols - 1) // n_cols\n",
-    "\n",
-    "# Create the figure and subplots\n",
-    "f,axs = plt.subplots(n_rows, n_cols, figsize=(5*n_cols, 4*n_rows))\n",
-    "axs = axs.flatten()  # Flatten the axes array for easy indexing\n",
-    "\n",
-    "# Plot each variable\n",
-    "for i, (var_name, da) in enumerate(tile_utm_ds.data_vars.items()):\n",
-    "    da.plot(ax=axs[i], cmap='viridis')\n",
-    "    axs[i].set_title(var_name)\n",
-    "\n",
-    "# Remove any unused subplots\n",
-    "for j in range(i+1, len(axs)):\n",
-    "    f.delaxes(axs[j])\n",
-    "\n",
-    "f.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tile_utm_df = dataset_to_dataframe(tile,tile_utm_ds)\n",
-    "tile_utm_df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write to files"
+    "## create parquets"
    ]
   },
   {
@@ -369,13 +78,13 @@
    "outputs": [],
    "source": [
     "cluster = coiled.Cluster(idle_timeout=\"10 minutes\",\n",
-    "                         n_workers=5,\n",
+    "                         n_workers=40,\n",
     "                         worker_memory=\"64 GB\",\n",
     "                         worker_cpu=8,\n",
-    "                         scheduler_memory=\"32 GB\",\n",
+    "                         scheduler_memory=\"64 GB\",\n",
     "                         spot_policy=\"spot\",\n",
     "                         environ={\"GDAL_DISABLE_READDIR_ON_OPEN\": \"EMPTY_DIR\"},\n",
-    "                         workspace=\"azure\",\n",
+    "                         workspace=\"uwtacolab\", #\"azure\"\n",
     "                         )\n",
     "\n",
     "client = cluster.get_client()"
@@ -383,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,17 +110,14 @@
     "except:\n",
     "    existing_filenames = []\n",
     "        \n",
+    "\n",
+    "tiles = [tile for tile in tiles if f'tile_{tile.row:03d}_{tile.col:03d}.parquet' not in existing_filenames]\n",
+    "filenames = [f'tile_{tile.row:03d}_{tile.col:03d}.parquet' for tile in tiles if f'tile_{tile.row:03d}_{tile.col:03d}.parquet' not in existing_filenames]\n",
+    "\n",
     "futures = []\n",
     "\n",
-    "for tile in tqdm.tqdm(tiles,total=len(tiles)):\n",
-    "\n",
-    "    filename = f'tile_{tile.row:03d}_{tile.col:03d}.parquet'\n",
-    "\n",
-    "    if filename in existing_filenames:\n",
-    "        print(f'{filename} already exists, skipping...')\n",
-    "        continue\n",
-    "\n",
-    "    future = client.submit(create_and_save_analysis_parquet, tile, filename, config.azure_blob_fs, global_ds, retries=1)\n",
+    "for tile,filename in tqdm.tqdm(zip(tiles,filenames),total=len(filenames)):\n",
+    "    future = client.submit(create_and_save_analysis_parquet, tile, filename, config.azure_blob_fs, global_ds, config.ee_credentials, retries=3)\n",
     "    futures.append(future)"
    ]
   },
@@ -421,8 +127,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for future, result in dask.distributed.as_completed(futures, with_results=True):\n",
-    "    print(f\"{result[0]} : {'SUCCESS' if result[1] == True else 'FAILED'}\")"
+    "for future,result in dask.distributed.as_completed(futures, with_results=True):\n",
+    "    if result[1] == True:\n",
+    "        print(f\"Successfully processed tile {result[0]}\")\n",
+    "    if result[1] == False:\n",
+    "        print(f\"Failed for tile {result[0]} with error: {result[2]} and traceback: {result[3]}\")"
    ]
   },
   {
@@ -440,13 +149,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(parquet_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(existing_filenames)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Code graveyard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tile = config.get_tile(14,27)\n",
+    "# tile.geobox.explore(tiles='EsriWorldImagery')\n",
+    "\n",
+    "# tile_utm_ds = create_utm_datacube(tile, global_ds)\n",
+    "# tile_utm_ds\n",
+    "\n",
+    "\n",
+    "# # Get the number of variables\n",
+    "# n_vars = len(tile_utm_ds.data_vars)\n",
+    "\n",
+    "# # Calculate the number of rows and columns for the subplots\n",
+    "# n_cols = 4  # You can adjust this number as needed\n",
+    "# n_rows = (n_vars + n_cols - 1) // n_cols\n",
+    "\n",
+    "# # Create the figure and subplots\n",
+    "# f,axs = plt.subplots(n_rows, n_cols, figsize=(5*n_cols, 4*n_rows))\n",
+    "# axs = axs.flatten()  # Flatten the axes array for easy indexing\n",
+    "\n",
+    "# # Plot each variable\n",
+    "# for i, (var_name, da) in enumerate(tile_utm_ds.data_vars.items()):\n",
+    "#     da.plot(ax=axs[i], cmap='viridis')\n",
+    "#     axs[i].set_title(var_name)\n",
+    "\n",
+    "# # Remove any unused subplots\n",
+    "# for j in range(i+1, len(axs)):\n",
+    "#     f.delaxes(axs[j])\n",
+    "\n",
+    "# f.tight_layout()\n",
+    "\n",
+    "# tile_utm_df = dataset_to_dataframe(tile,tile_utm_ds)\n",
+    "# tile_utm_df"
    ]
   },
   {
