--- a/analysis/global_analysis.ipynb
+++ b/analysis/global_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,38 +21,14 @@
     "import xarray as xr\n",
     "import coiled\n",
     "import dask\n",
-    "from global_snowmelt_runoff_onset.config import Config, Tile"
+    "from global_snowmelt_runoff_onset.config import Config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Configuration loaded:\n",
-      "resolution = 0.00072000072000072\n",
-      "spatial_chunk_dim = 2048\n",
-      "bbox_left = -179.999\n",
-      "bbox_right = 179.999\n",
-      "bbox_top = 81.099\n",
-      "bbox_bottom = -59.999\n",
-      "wy_start = 2015\n",
-      "wy_end = 2024\n",
-      "low_backscatter_threshold = 0.001\n",
-      "min_monthly_acquisitions = 2\n",
-      "max_allowed_days_gap_per_orbit = 30\n",
-      "min_years_for_median_std = 3\n",
-      "valid_tiles_geojson_path = ../processing/valid_tiles.geojson\n",
-      "tile_results_path = ../processing/tile_results.csv\n",
-      "global_runoff_zarr_store_azure_path = snowmelt/snowmelt_runoff_onset/global.zarr\n",
-      "seasonal_snow_mask_zarr_store_azure_path = snowmelt/snow_mask_v2/global_modis_snow_mask.zarr\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config = Config('../config/global_config.txt')"
    ]
@@ -65,12 +41,12 @@
    "source": [
     "cluster = coiled.Cluster(idle_timeout=\"10 minutes\",\n",
     "                        n_workers=10,\n",
-    "                        worker_memory=\"32 GB\",\n",
-    "                        worker_cpu=4,\n",
-    "                        scheduler_memory=\"32 GB\",\n",
+    "                        worker_memory=\"64 GB\",\n",
+    "                        worker_cpu=8,\n",
+    "                        scheduler_memory=\"64 GB\",\n",
     "                        spot_policy=\"spot\",\n",
     "                        environ={\"GDAL_DISABLE_READDIR_ON_OPEN\": \"EMPTY_DIR\"},\n",
-    "                        workspace=\"azure\",\n",
+    "                        workspace=\"uwtacolab\",\n",
     "                        )\n",
     "\n",
     "client = cluster.get_client()"
@@ -78,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddf = dd.read_parquet('snowmelt/analysis/tiles/', filesystem=config.azure_blob_fs)"
+    "results_ddf = dd.read_parquet('snowmelt/analysis/tiles/', filesystem=config.azure_blob_fs,split_row_groups='adaptive')\n",
+    "results_ddf"
    ]
   },
   {
@@ -107,9 +84,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = ddf[[\"original_lat\",\"original_lon\",\"runoff_onset_median\",\"dem\",\"aspect\"]].persist()\n",
-    "all_tiles_results_df = ddf[[\"original_lat\",\"runoff_onset_median\",\"dem\"]].repartition(partition_size=\"256 MiB\").persist()#.compute().repartition(partition_size=\"256 MiB\")\n",
-    "all_tiles_results_df"
+    "results_ddf.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#all_tiles_results_df = ddf[[\"original_lat\",\"dem\",\"runoff_onset_median\",\"chili\"]].repartition(partition_size=\"256 MiB\").persist()\n",
+    "all_tiles_results_df = ddf"
    ]
   },
   {
@@ -130,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,19 +129,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tiles_results_df.corr().compute()"
+    "all_tiles_results_df.corr(numeric_only=True).compute()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## global analysis: bin by latitude and elevation"
+    "## create latitude and elevation bins"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +163,7 @@
    "source": [
     "all_tiles_results_df['lat_bin'] = all_tiles_results_df['original_lat'].map_partitions(pd.cut, lat_bins)\n",
     "all_tiles_results_df['dem_bin'] = all_tiles_results_df['dem'].map_partitions(pd.cut, dem_bins)\n",
-    "all_tiles_results_df = all_tiles_results_df.dropna()\n",
+    "all_tiles_results_df = all_tiles_results_df.dropna(subset=['lat_bin','dem_bin'])\n",
     "all_tiles_results_df"
    ]
   },
@@ -194,12 +179,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Median snowmelt runoff onset binned by elevation and latitude"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "groupby_latitude_and_elevation_df = all_tiles_results_df.groupby(['lat_bin', 'dem_bin']).median()#.reset_index()\n",
+    "groupby_latitude_and_elevation_df = all_tiles_results_df[['lat_bin','dem_bin','runoff_onset_median']].groupby(['lat_bin', 'dem_bin']).median()\n",
     "groupby_latitude_and_elevation_df"
    ]
   },
@@ -229,39 +221,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Pivot the result DataFrame to create a 2D array suitable for heatmap\n",
-    "#pivot_df = result.pivot(index='lat_bin', columns='dem_bin', values='runoff_onset_median')\n",
-    "\n",
-    "\n",
-    "# Create the heatmap\n",
     "f,ax=plt.subplots(figsize=(8,10),dpi=300)\n",
     "sns.heatmap(runoff_onset_vs_lat_and_elev_df, square=True,ax=ax, cmap='viridis', cbar_kws={'label': 'snowmelt runoff onset [DOWY]'},\n",
     "            vmin=0,vmax=365)\n",
     "\n",
-    "# Set labels and title\n",
     "ax.set_xlabel('elevation (m)')\n",
     "ax.set_ylabel('latitude [degrees]')\n",
-    "ax.set_title('2015-2024 median date of snowmelt runoff onset\\nbinned by elevation and latitude')\n",
-    "\n",
-    "# Rotate x-axis labels for better readability\n",
-    "#ax.set_ticks(rotation=45, ha='right')\n",
-    "\n",
-    "#f.tight_layout()"
+    "ax.set_title('2015-2024 median date of snowmelt runoff onset\\nbinned by elevation and latitude')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## global analysis: "
+    "## global analysis: chili / influence of shortwave radiation"
    ]
   },
   {
@@ -269,28 +243,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_tiles_results_df['chili_class'] = 'neutral'\n",
+    "all_tiles_results_df['chili_class'] = all_tiles_results_df['chili_class'].where(\n",
+    "    (all_tiles_results_df['chili'] >= 0.448) & (all_tiles_results_df['chili'] <= 0.767),\n",
+    "    other=all_tiles_results_df['chili'].map(lambda x: 'warm' if x > 0.767 else 'cool' if x < 0.448 else 'neutral')\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped = all_tiles_results_df[['lat_bin','dem_bin','chili_class','runoff_onset_median']].dropna().groupby(['lat_bin', 'dem_bin','chili_class'])['runoff_onset_median'].mean().compute()\n",
+    "grouped"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pivot_df = grouped.unstack()\n",
+    "pivot_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reshape to get warm and cool values\n",
+    "warm_cool_ratio_df = pivot_df['warm'] / pivot_df['cool']\n",
+    "warm_cool_ratio_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warm_cool_ratio_df = warm_cool_ratio_df.reset_index().pivot(index='lat_bin', columns='dem_bin').reindex(lat_bins).sort_index(ascending=False)\n",
+    "warm_cool_ratio_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f,ax=plt.subplots(figsize=(8,10),dpi=300)\n",
+    "sns.heatmap(warm_cool_ratio_df, square=True,ax=ax, cmap='PuOr', cbar_kws={'label': 'warm / cool'},robust=True)\n",
+    "\n",
+    "ax.set_xlabel('elevation (m)')\n",
+    "ax.set_ylabel('latitude [degrees]')\n",
+    "ax.set_title('Ratio of snowmelt runoff onset medians by CHILI warm/cool classification\\nbinned by elevation and latitude')"
+   ]
   },
   {
    "cell_type": "code",
@@ -339,7 +353,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # import pyarrow.parquet as pq\n",
+    "# # import glob\n",
+    "# # import os\n",
+    "\n",
+    "# #config.azure_blob_fs.download('snowmelt/analysis/tiles/','tiles/',recursive=True)\n",
+    "\n",
+    "# # for filepath in glob.glob('tiles/*'):\n",
+    "# #     try:\n",
+    "# #         pq.ParquetFile(filepath)\n",
+    "# #     except Exception as e:\n",
+    "# #         print(f'Error reading {filepath}: {e}')\n",
+    "# #         os.remove(filepath)\n",
+    "# # ddf = dd.read_parquet('tiles/')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# #df = ddf[[\"original_lat\",\"original_lon\",\"runoff_onset_median\",\"dem\",\"aspect\"]].persist()\n",
+    "\n",
+    "# config.azure_blob_fs.ls('snowmelt/analysis/tiles/')\n",
+    "\n",
+    "# ddf = dd.read_parquet('snowmelt/analysis/tiles/tile_008*', filesystem=config.azure_blob_fs)\n",
+    "# ddf\n",
+    "\n",
+    "# for col in ddf.columns:\n",
+    "#     if col == 'hemisphere':\n",
+    "#         continue\n",
+    "#     print(f'for {col} with data type {ddf[col].dtype}')\n",
+    "#     print(f'the mean is {ddf[col].mean().compute()}')\n",
+    "#     print(f'the std is {ddf[col].std().compute()}')\n",
+    "#     print(f'the min is {ddf[col].min().compute()}')\n",
+    "#     print(f'the max is {ddf[col].max().compute()}')\n",
+    "#     print(f'the median is {ddf[col].median_approximate().compute()}')\n",
+    "#     print('---------------------------------')\n",
+    "\n",
+    "    \n",
+    "# all_tiles_results_df = ddf[[\"original_lat\",\"runoff_onset_median\",\"dem\"]].repartition(partition_size=\"256 MiB\").persist()#.compute().repartition(partition_size=\"256 MiB\")\n",
+    "# all_tiles_results_df"
+   ]
   }
  ],
  "metadata": {
