update new files

--- a/analysis/global_analysis.ipynb
+++ b/analysis/global_analysis.ipynb
@@ -93,8 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#all_tiles_results_df = ddf[[\"original_lat\",\"dem\",\"runoff_onset_median\",\"chili\"]].repartition(partition_size=\"256 MiB\").persist()\n",
-    "all_tiles_results_df = ddf"
+    "#results_df = ddf[[\"original_lat\",\"dem\",\"runoff_onset_median\",\"chili\"]].repartition(partition_size=\"256 MiB\").persist()\n",
+    "results_df = ddf"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tiles_results_df.memory_usage().compute() / 1e9"
+    "results_df.memory_usage().compute() / 1e9"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tiles_results_df.corr(numeric_only=True).compute()"
+    "results_df.corr(numeric_only=True).compute()"
    ]
   },
   {
@@ -161,10 +161,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tiles_results_df['lat_bin'] = all_tiles_results_df['original_lat'].map_partitions(pd.cut, lat_bins)\n",
-    "all_tiles_results_df['dem_bin'] = all_tiles_results_df['dem'].map_partitions(pd.cut, dem_bins)\n",
-    "all_tiles_results_df = all_tiles_results_df.dropna(subset=['lat_bin','dem_bin'])\n",
-    "all_tiles_results_df"
+    "results_df['lat_bin'] = results_df['original_lat'].map_partitions(pd.cut, lat_bins)\n",
+    "results_df['dem_bin'] = results_df['dem'].map_partitions(pd.cut, dem_bins)\n",
+    "results_df = results_df.dropna(subset=['lat_bin','dem_bin'])\n",
+    "results_df"
    ]
   },
   {
@@ -173,9 +173,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tiles_results_df['lat_bin'] = all_tiles_results_df['lat_bin'].apply(lambda x: x.left).astype(int)\n",
-    "all_tiles_results_df['dem_bin'] = all_tiles_results_df['dem_bin'].apply(lambda x: x.left).astype(int)\n",
-    "all_tiles_results_df"
+    "results_df['lat_bin'] = results_df['lat_bin'].apply(lambda x: x.left).astype(int)\n",
+    "results_df['dem_bin'] = results_df['dem_bin'].apply(lambda x: x.left).astype(int)\n",
+    "results_df"
    ]
   },
   {
@@ -191,18 +191,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "groupby_latitude_and_elevation_df = all_tiles_results_df[['lat_bin','dem_bin','runoff_onset_median']].groupby(['lat_bin', 'dem_bin']).median()\n",
-    "groupby_latitude_and_elevation_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with dask.config.set({\"dataframe.shuffle.method\": \"tasks\"}):\n",
-    "    groupby_latitude_and_elevation_df = groupby_latitude_and_elevation_df.compute()\n",
+    "    groupby_latitude_and_elevation_df = results_df[['lat_bin','dem_bin','runoff_onset_median']].groupby(['lat_bin', 'dem_bin']).median().compute()\n",
     "groupby_latitude_and_elevation_df"
    ]
   },
@@ -244,10 +234,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tiles_results_df['chili_class'] = 'neutral'\n",
-    "all_tiles_results_df['chili_class'] = all_tiles_results_df['chili_class'].where(\n",
-    "    (all_tiles_results_df['chili'] >= 0.448) & (all_tiles_results_df['chili'] <= 0.767),\n",
-    "    other=all_tiles_results_df['chili'].map(lambda x: 'warm' if x > 0.767 else 'cool' if x < 0.448 else 'neutral')\n",
+    "results_df['chili_class'] = 'neutral'\n",
+    "results_df['chili_class'] = results_df['chili_class'].where(\n",
+    "    (results_df['chili'] >= 0.448) & (results_df['chili'] <= 0.767),\n",
+    "    other=results_df['chili'].map(lambda x: 'warm' if x > 0.767 else 'cool' if x < 0.448 else 'neutral')\n",
     ")"
    ]
   },
@@ -257,7 +247,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grouped = all_tiles_results_df[['lat_bin','dem_bin','chili_class','runoff_onset_median']].dropna().groupby(['lat_bin', 'dem_bin','chili_class'])['runoff_onset_median'].mean().compute()\n",
+    "grouped = results_df[['lat_bin','dem_bin','chili_class','runoff_onset_median']].dropna().groupby(['lat_bin', 'dem_bin','chili_class'])['runoff_onset_median'].median().compute()\n",
+    "# and try corr here instead of ratio... and try MEDIAN\n",
     "grouped"
    ]
   },
@@ -311,7 +302,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "results_df[['lat_bin','dem_bin','chili_class','runoff_onset_median']].dropna().groupby(['lat_bin', 'dem_bin']).corr().compute()"
+   ]
   },
   {
    "cell_type": "code",
@@ -389,8 +382,8 @@
     "#     print('---------------------------------')\n",
     "\n",
     "    \n",
-    "# all_tiles_results_df = ddf[[\"original_lat\",\"runoff_onset_median\",\"dem\"]].repartition(partition_size=\"256 MiB\").persist()#.compute().repartition(partition_size=\"256 MiB\")\n",
-    "# all_tiles_results_df"
+    "# results_df = ddf[[\"original_lat\",\"runoff_onset_median\",\"dem\"]].repartition(partition_size=\"256 MiB\").persist()#.compute().repartition(partition_size=\"256 MiB\")\n",
+    "# results_df"
    ]
   }
  ],
