--- a/processing/tiles_to_process.ipynb
+++ b/processing/tiles_to_process.ipynb
@@ -16,21 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import odc.stac\n",
-    "import adlfs\n",
-    "import xarray as xr\n",
-    "import pathlib\n",
-    "import tqdm\n",
-    "import folium \n",
     "import shapely\n",
     "import matplotlib.pyplot as plt\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "import rioxarray as rxr\n",
     "from global_snowmelt_runoff_onset.config import Config, Tile\n",
     "import easysnowdata\n",
     "import coiled\n",
@@ -1040,6 +1033,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eric/miniconda3/envs/new_global_snowmelt_runoff_onset/lib/python3.13/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
     },
     {
      "name": "stderr",
