add ability to just get weather station tiles

--- a/processing/runoff_onset_parallel.ipynb
+++ b/processing/runoff_onset_parallel.ipynb
@@ -419,11 +419,12 @@
     "## Tile selection and testing\n",
     "\n",
     "Select tiles for processing based on different criteria:\n",
-    "- **All tiles**: Complete global coverage\n",
-    "- **Processed**: Successfully completed tiles  \n",
-    "- **Failed**: Tiles that encountered errors\n",
-    "- **Unprocessed**: Tiles not yet attempted\n",
-    "- **Unprocessed and failed**: Tiles needing (re)processing (USE THIS ONE!!)"
+    "- **`'all'`**: all global coverage\n",
+    "- **`'processed'`**: Successfully completed tiles  \n",
+    "- **`'failed'`**: Tiles that encountered errors\n",
+    "- **`'unprocessed'`**: Tiles not yet attempted\n",
+    "- **`'unprocessed_and_failed'`**: Tiles needing processing or reprocessing. Unless you have a specific need / debugging, you should probably use this one.\n",
+    "- **`'unprocessed_and_failed_weather_stations'`**: Unprocessed/failed tiles that contain automatic weather stations. Useful for validation."
    ]
   },
   {
@@ -432,31 +433,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fields = config.fields\n",
-    "tiles = config.get_list_of_tiles(which='unprocessed_and_failed')\n",
-    "#tiles = config.get_list_of_tiles(which='unprocessed')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# run this cell to just process WUS tiles with stations\n",
-    "\n",
-    "StationsWUS = easysnowdata.automatic_weather_stations.StationCollection()\n",
-    "tiles_with_stations_gdf = gpd.sjoin(\n",
-    "    config.valid_tiles_gdf,\n",
-    "    StationsWUS.all_stations,\n",
-    "    how='inner',\n",
-    "    predicate='contains'\n",
-    ")\n",
-    "tiles_with_stations_gdf = tiles_with_stations_gdf.drop_duplicates(subset=['row','col'])\n",
-    "tiles_with_stations_gdf\n",
-    "station_tiles = set(zip(tiles_with_stations_gdf.row, tiles_with_stations_gdf.col))\n",
-    "\n",
-    "tiles = [tile for tile in tiles if (tile.row,tile.col) in station_tiles]"
+    "#tiles = config.get_list_of_tiles(which='unprocessed_and_failed')\n",
+    "tiles = config.get_list_of_tiles(which='unprocessed_and_failed_weather_stations') # run this to process the tiles with weather stations"
    ]
   },
   {
@@ -480,8 +458,8 @@
     "            successful_tiles.append(computed_result)\n",
     "\n",
     "            df = pd.DataFrame(\n",
-    "                [[getattr(computed_result, f) for f in fields]],\n",
-    "                columns=fields,\n",
+    "                [[getattr(computed_result, f) for f in config.fields]],\n",
+    "                columns=config.fields,\n",
     "            )\n",
     "            df.to_csv(config.tile_results_path, mode='a', header=False, index=False) # header=True if starting over\n",
     "            print(f'Tile ({computed_result.row},{computed_result.col}) completed')\n",
@@ -489,7 +467,7 @@
     "        for tile in tile_batch:\n",
     "            if tile.index not in [computed_tile.index for computed_tile in successful_tiles]:\n",
     "\n",
-    "                df = pd.DataFrame([[getattr(tile, f) for f in fields]],columns=fields,)\n",
+    "                df = pd.DataFrame([[getattr(tile, f) for f in config.fields]],columns=config.fields,)\n",
     "                df.to_csv(config.tile_results_path, mode='a', header=False, index=False) # header=True if starting over\n",
     "\n",
     "                print(f'Tile ({tile.row},{tile.col}) failed')\n",
